<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.DefinicoesFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_darckmode"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"

                android:layout_height="wrap_content"
                android:hint="@string/darckmode"
                android:textSize="25sp"/>

            <Switch
                android:layout_marginStart="15dp"
                android:id="@+id/theme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_language"/>
            <TextView
                android:layout_marginStart="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/linguagem"
                android:textSize="25sp"/>




        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_star_app"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"

                android:hint="@string/avalie"
                android:textSize="25sp"/>



        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_found_us"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"

                android:layout_height="wrap_content"
                android:hint="@string/encontre_nos"
                android:textSize="25sp"/>



        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_contact"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"

                android:hint="@string/contacte_nos"
                android:textSize="25sp"/>



        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_restore"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"

                android:hint="@string/restaurar"
                android:textSize="25sp"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
           <com.google.android.material.button.MaterialButton
               android:layout_width="wrap_content"
               android:hint="@string/guardar_btn"
               android:textColorHint="@color/black"
               app:cornerRadius="20dp"
               android:backgroundTint="#D6D3D3"
               android:layout_height="wrap_content">

           </com.google.android.material.button.MaterialButton>



        </LinearLayout>

    </LinearLayout>


</LinearLayout>