<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    android:background="@color/purple_200"
    tools:context=".autentication.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bem_vindo"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColorHint="@color/black"
                />

        </LinearLayout>
        <LinearLayout
            android:background="@drawable/campo_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_email"/>

            <EditText
                android:textSize="20sp"
android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/campo_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="horizontal">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_person"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="text"
                android:hint="@string/user"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/campo_texto"
            android:layout_width="match_parent"
            android:layout_margin="10dp"

            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_password"/>

            <EditText
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/senha1"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/campo_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha2"
                android:inputType="textPassword"
                android:textSize="20sp"

                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/campo_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_phonenumber"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/criar_conta_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/criar_conta"
                app:cornerRadius="50dp"
                android:layout_marginStart="150dp"
                android:backgroundTint="#6ADD8A"
                android:textColorHint="@color/black"
                >

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ou"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColorHint="@color/black"/>
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginStart="90dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/google"/>
            <ImageView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook"/>

            <ImageView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/twitter"/>
        </LinearLayout>
        <LinearLayout

            android:layout_margin="30dp"
            android:background="@drawable/campo_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/possi_conta_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/possui_conta"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColorHint="@color/black"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>