<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purple_200"
    android:layout_height="match_parent"
    tools:context=".home.InfoPessoalFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="114dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:text="aylton.sitefane"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/pnome"
                android:inputType="text"

                android:textColorHint="#78909C"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:layout_marginStart="20dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/unome"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/paismorada"
                android:inputType="text"

                android:textColorHint="#78909C"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:layout_marginEnd="20dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/cidademorada"
                android:textColorHint="#78909C"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <EditText
                android:inputType="text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:background="@drawable/campo_texto"
                android:hint="@string/nacionaliade"

                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:hint="@string/guardar_btn"
                android:textColorHint="@color/black"
                app:cornerRadius="20dp"
                android:textSize="25sp"
                android:backgroundTint="#C8C1C1"
                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>