<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200"
    android:gravity="center_horizontal|center_vertical"
    android:layout_gravity="center_vertical|center_horizontal"
    tools:context=".autentication.ConfirmationRecoverAccountFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/recoverinfo"
    android:textAlignment="center"
    android:textColorHint="#CD040837"
    android:textSize="30sp"
    />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginStart="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_person"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="aylton.sitefane1@gmail.com"
                android:textColorHint="@color/black"/>
        </LinearLayout>
        <TextView
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recoverinfo3"
            android:textColorHint="@color/black"
            android:textSize="25sp"/>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:hint=" "

                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/campo_texto"/>
            <EditText
                android:hint=" "

                android:inputType="number"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/campo_texto"/>
            <EditText
                android:hint=" "

                android:inputType="number"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/campo_texto"/>
            <EditText
                android:hint=" "

                android:inputType="number"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/campo_texto"/>
            <EditText
                android:hint=" "
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:background="@drawable/campo_texto"/>

            <EditText
                android:layout_width="60dp"

                android:layout_height="48dp"
                android:background="@drawable/campo_texto"

                android:inputType="number" />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:hint="@string/proximo_btn"
            app:cornerRadius="25dp"
            android:textColorHint="@color/black"
            android:backgroundTint="#651C2B7C"

            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</LinearLayout>